--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -3,6 +3,16 @@
 
 /* universal */
 
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
 body {
 	padding-top: 60px;
 }
@@ -22,7 +32,6 @@ textarea {
 .center h1 {
 	margin-bottom: 10px;
 }
-
 
 /* typography */
 
@@ -99,4 +108,14 @@ footer ul {
 footer ul li {
 	float: left;
 	margin-left: 15px;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
